# ADS-2026

./: .gitignore  CMakeLists.txt  README.md
lab01/: CMakeLists.txt  main.cpp
lab02/: CMakeLists.txt  IODialog.h  Main.cpp  RBNode.h
lab03/: CMakeLists.txt  RBNode.h  problem1.cpp  problem2.cpp
lab04/: BTree.h  CMakeLists.txt  IODialog.h  main.cpp
lab05/: CMakeLists.txt  IODialog.h  heap.h  main.cpp
lab05_2/: CMakeLists.txt  IODialog.h  binomial_heap.h  main.cpp
lab08/: CMakeLists.txt  main.cpp
